parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO
    FECHA_CHAVE
    ABRE_CHAVE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> lista_variaveis VIRGULA var
Rule 10    lista_variaveis -> var
Rule 11    var -> ID
Rule 12    var -> ID indice
Rule 13    indice -> indice ABRE_COLCHETE expressao FECHA_COLCHETE
Rule 14    indice -> ABRE_COLCHETE expressao FECHA_COLCHETE
Rule 15    tipo -> INTEIRO
Rule 16    tipo -> FLUTUANTE
Rule 17    declaracao_funcao -> tipo cabecalho
Rule 18    declaracao_funcao -> cabecalho
Rule 19    cabecalho -> ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
Rule 20    lista_parametros -> lista_parametros VIRGULA lista_parametros
Rule 21    lista_parametros -> parametro
Rule 22    lista_parametros -> vazio
Rule 23    parametro -> tipo DOIS_PONTOS ID
Rule 24    parametro -> parametro ABRE_COLCHETE FECHA_COLCHETE
Rule 25    corpo -> corpo acao
Rule 26    corpo -> vazio
Rule 27    acao -> expressao
Rule 28    acao -> declaracao_variaveis
Rule 29    acao -> se
Rule 30    acao -> repita
Rule 31    acao -> leia
Rule 32    acao -> escreva
Rule 33    acao -> retorna
Rule 34    se -> SE expressao ENTAO corpo FIM
Rule 35    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 36    repita -> REPITA corpo ATE expressao
Rule 37    atribuicao -> var ATRIBUICAO expressao
Rule 38    leia -> LEIA ABRE_PARENTESES expressao FECHA_PARENTESES
Rule 39    escreva -> ESCREVA ABRE_PARENTESES expressao FECHA_PARENTESES
Rule 40    retorna -> RETORNA ABRE_PARENTESES expressao FECHA_PARENTESES
Rule 41    expressao -> expressao_logica
Rule 42    expressao -> atribuicao
Rule 43    expressao_logica -> expressao_simples
Rule 44    expressao_logica -> expressao_logica operador_logico expressao_simples
Rule 45    expressao_simples -> expressao_aditiva
Rule 46    expressao_simples -> expressao_logica operador_relacional expressao_simples
Rule 47    expressao_aditiva -> expressao_multiplicativa
Rule 48    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 49    expressao_multiplicativa -> expressao_unaria
Rule 50    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 51    expressao_unaria -> fator
Rule 52    expressao_unaria -> operador_soma fator
Rule 53    expressao_unaria -> NAO fator
Rule 54    operador_relacional -> MENOR
Rule 55    operador_relacional -> MAIOR
Rule 56    operador_relacional -> IGUAL
Rule 57    operador_relacional -> DIFERENTE
Rule 58    operador_relacional -> MENOR_IGUAL
Rule 59    operador_relacional -> MAIOR_IGUAL
Rule 60    operador_soma -> SOMA
Rule 61    operador_soma -> SUBTRACAO
Rule 62    operador_logico -> E
Rule 63    operador_logico -> OU
Rule 64    operador_negacao -> NAO
Rule 65    operador_multiplicacao -> MULTIPLICACAO
Rule 66    operador_multiplicacao -> DIVISAO
Rule 67    fator -> ABRE_PARENTESES expressao FECHA_PARENTESES
Rule 68    fator -> var
Rule 69    fator -> chamada_funcao
Rule 70    fator -> numero
Rule 71    numero -> NUM_INTEIRO
Rule 72    numero -> NUM_PONTO_FLUTUANTE
Rule 73    chamada_funcao -> ID ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
Rule 74    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 75    lista_argumentos -> expressao
Rule 76    lista_argumentos -> vazio
Rule 77    vazio -> <empty>

Terminals, with rules where they appear

ABRE_CHAVE           : 
ABRE_COLCHETE        : 13 14 24
ABRE_PARENTESES      : 19 38 39 40 67 73
ATE                  : 36
ATRIBUICAO           : 37
COMENTARIO           : 
DIFERENTE            : 57
DIVISAO              : 66
DOIS_PONTOS          : 7 23
E                    : 62
ENTAO                : 34 35
ESCREVA              : 39
FECHA_CHAVE          : 
FECHA_COLCHETE       : 13 14 24
FECHA_PARENTESES     : 19 38 39 40 67 73
FIM                  : 19 34 35
FLUTUANTE            : 16
ID                   : 11 12 19 23 73
IGUAL                : 56
INTEIRO              : 15
LEIA                 : 38
MAIOR                : 55
MAIOR_IGUAL          : 59
MENOR                : 54
MENOR_IGUAL          : 58
MULTIPLICACAO        : 65
NAO                  : 53 64
NUM_INTEIRO          : 71
NUM_PONTO_FLUTUANTE  : 72
OU                   : 63
REPITA               : 36
RETORNA              : 40
SE                   : 34 35
SENAO                : 35
SOMA                 : 60
SUBTRACAO            : 61
VIRGULA              : 9 20 74
error                : 

Nonterminals, with rules where they appear

acao                 : 25
atribuicao           : 8 42
cabecalho            : 17 18
chamada_funcao       : 69
corpo                : 19 25 34 35 35 36
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 28
escreva              : 32
expressao            : 13 14 27 34 35 36 37 38 39 40 67 74 75
expressao_aditiva    : 45 48
expressao_logica     : 41 44 46
expressao_multiplicativa : 47 48 50
expressao_simples    : 43 44 46
expressao_unaria     : 49 50
fator                : 51 52 53
indice               : 12 13
inicializacao_variaveis : 5
leia                 : 31
lista_argumentos     : 73 74
lista_declaracoes    : 1 2
lista_parametros     : 19 20 20
lista_variaveis      : 7 9
numero               : 70
operador_logico      : 44
operador_multiplicacao : 50
operador_negacao     : 
operador_relacional  : 46
operador_soma        : 48 52
parametro            : 21 24
programa             : 0
repita               : 30
retorna              : 33
se                   : 29
tipo                 : 7 17 23
var                  : 9 10 37 68
vazio                : 22 26 76

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (37) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    INTEIRO         shift and go to state 7
    FLUTUANTE       shift and go to state 5
    ID              shift and go to state 11

    cabecalho                      shift and go to state 2
    tipo                           shift and go to state 3
    declaracao_funcao              shift and go to state 8
    atribuicao                     shift and go to state 12
    inicializacao_variaveis        shift and go to state 1
    declaracao_variaveis           shift and go to state 9
    programa                       shift and go to state 13
    var                            shift and go to state 6
    declaracao                     shift and go to state 10
    lista_declaracoes              shift and go to state 4

state 1

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 2

    (18) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 18 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 18 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 18 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 18 (declaracao_funcao -> cabecalho .)


state 3

    (7) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (17) declaracao_funcao -> tipo . cabecalho
    (19) cabecalho -> . ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM

    DOIS_PONTOS     shift and go to state 14
    ID              shift and go to state 16

    cabecalho                      shift and go to state 15

state 4

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (37) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 7
    FLUTUANTE       shift and go to state 5
    ID              shift and go to state 11

    cabecalho                      shift and go to state 2
    tipo                           shift and go to state 3
    declaracao_funcao              shift and go to state 8
    atribuicao                     shift and go to state 12
    inicializacao_variaveis        shift and go to state 1
    declaracao_variaveis           shift and go to state 9
    var                            shift and go to state 6
    declaracao                     shift and go to state 17

state 5

    (16) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 16 (tipo -> FLUTUANTE .)
    ID              reduce using rule 16 (tipo -> FLUTUANTE .)


state 6

    (37) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 18


state 7

    (15) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 15 (tipo -> INTEIRO .)
    ID              reduce using rule 15 (tipo -> INTEIRO .)


state 8

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 9

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 10

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 11

    (19) cabecalho -> ID . ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ABRE_COLCHETE expressao FECHA_COLCHETE
    (14) indice -> . ABRE_COLCHETE expressao FECHA_COLCHETE

    ABRE_PARENTESES shift and go to state 19
    ATRIBUICAO      reduce using rule 11 (var -> ID .)
    ABRE_COLCHETE   shift and go to state 21

    indice                         shift and go to state 20

state 12

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 13

    (0) S' -> programa .



state 14

    (7) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (9) lista_variaveis -> . lista_variaveis VIRGULA var
    (10) lista_variaveis -> . var
    (11) var -> . ID
    (12) var -> . ID indice

    ID              shift and go to state 24

    var                            shift and go to state 23
    lista_variaveis                shift and go to state 22

state 15

    (17) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)


state 16

    (19) cabecalho -> ID . ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM

    ABRE_PARENTESES shift and go to state 19


state 17

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 18

    (37) atribuicao -> var ATRIBUICAO . expressao
    (41) expressao -> . expressao_logica
    (42) expressao -> . atribuicao
    (43) expressao_logica -> . expressao_simples
    (44) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (37) atribuicao -> . var ATRIBUICAO expressao
    (45) expressao_simples -> . expressao_aditiva
    (46) expressao_simples -> . expressao_logica operador_relacional expressao_simples
    (11) var -> . ID
    (12) var -> . ID indice
    (47) expressao_aditiva -> . expressao_multiplicativa
    (48) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (49) expressao_multiplicativa -> . expressao_unaria
    (50) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (51) expressao_unaria -> . fator
    (52) expressao_unaria -> . operador_soma fator
    (53) expressao_unaria -> . NAO fator
    (67) fator -> . ABRE_PARENTESES expressao FECHA_PARENTESES
    (68) fator -> . var
    (69) fator -> . chamada_funcao
    (70) fator -> . numero
    (60) operador_soma -> . SOMA
    (61) operador_soma -> . SUBTRACAO
    (73) chamada_funcao -> . ID ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
    (71) numero -> . NUM_INTEIRO
    (72) numero -> . NUM_PONTO_FLUTUANTE

    ID              shift and go to state 40
    NAO             shift and go to state 28
    ABRE_PARENTESES shift and go to state 30
    SOMA            shift and go to state 26
    SUBTRACAO       shift and go to state 29
    NUM_INTEIRO     shift and go to state 35
    NUM_PONTO_FLUTUANTE shift and go to state 36

    expressao_simples              shift and go to state 25
    expressao_logica               shift and go to state 41
    expressao                      shift and go to state 31
    operador_soma                  shift and go to state 27
    chamada_funcao                 shift and go to state 37
    expressao_aditiva              shift and go to state 38
    fator                          shift and go to state 32
    expressao_unaria               shift and go to state 34
    numero                         shift and go to state 39
    atribuicao                     shift and go to state 42
    var                            shift and go to state 33
    expressao_multiplicativa       shift and go to state 43

state 19

    (19) cabecalho -> ID ABRE_PARENTESES . lista_parametros FECHA_PARENTESES corpo FIM
    (20) lista_parametros -> . lista_parametros VIRGULA lista_parametros
    (21) lista_parametros -> . parametro
    (22) lista_parametros -> . vazio
    (23) parametro -> . tipo DOIS_PONTOS ID
    (24) parametro -> . parametro ABRE_COLCHETE FECHA_COLCHETE
    (77) vazio -> .
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE

    FECHA_PARENTESES reduce using rule 77 (vazio -> .)
    VIRGULA         reduce using rule 77 (vazio -> .)
    INTEIRO         shift and go to state 7
    FLUTUANTE       shift and go to state 5

    parametro                      shift and go to state 46
    lista_parametros               shift and go to state 44
    vazio                          shift and go to state 47
    tipo                           shift and go to state 45

state 20

    (12) var -> ID indice .
    (13) indice -> indice . ABRE_COLCHETE expressao FECHA_COLCHETE

    ATRIBUICAO      reduce using rule 12 (var -> ID indice .)
    MULTIPLICACAO   reduce using rule 12 (var -> ID indice .)
    DIVISAO         reduce using rule 12 (var -> ID indice .)
    SOMA            reduce using rule 12 (var -> ID indice .)
    SUBTRACAO       reduce using rule 12 (var -> ID indice .)
    E               reduce using rule 12 (var -> ID indice .)
    OU              reduce using rule 12 (var -> ID indice .)
    MENOR           reduce using rule 12 (var -> ID indice .)
    MAIOR           reduce using rule 12 (var -> ID indice .)
    IGUAL           reduce using rule 12 (var -> ID indice .)
    DIFERENTE       reduce using rule 12 (var -> ID indice .)
    MENOR_IGUAL     reduce using rule 12 (var -> ID indice .)
    MAIOR_IGUAL     reduce using rule 12 (var -> ID indice .)
    FECHA_PARENTESES reduce using rule 12 (var -> ID indice .)
    INTEIRO         reduce using rule 12 (var -> ID indice .)
    FLUTUANTE       reduce using rule 12 (var -> ID indice .)
    ID              reduce using rule 12 (var -> ID indice .)
    $end            reduce using rule 12 (var -> ID indice .)
    FECHA_COLCHETE  reduce using rule 12 (var -> ID indice .)
    VIRGULA         reduce using rule 12 (var -> ID indice .)
    FIM             reduce using rule 12 (var -> ID indice .)
    SE              reduce using rule 12 (var -> ID indice .)
    REPITA          reduce using rule 12 (var -> ID indice .)
    LEIA            reduce using rule 12 (var -> ID indice .)
    ESCREVA         reduce using rule 12 (var -> ID indice .)
    RETORNA         reduce using rule 12 (var -> ID indice .)
    NAO             reduce using rule 12 (var -> ID indice .)
    ABRE_PARENTESES reduce using rule 12 (var -> ID indice .)
    NUM_INTEIRO     reduce using rule 12 (var -> ID indice .)
    NUM_PONTO_FLUTUANTE reduce using rule 12 (var -> ID indice .)
    ENTAO           reduce using rule 12 (var -> ID indice .)
    ATE             reduce using rule 12 (var -> ID indice .)
    SENAO           reduce using rule 12 (var -> ID indice .)
    ABRE_COLCHETE   shift and go to state 48


state 21

    (14) indice -> ABRE_COLCHETE . expressao FECHA_COLCHETE
    (41) expressao -> . expressao_logica
    (42) expressao -> . atribuicao
    (43) expressao_logica -> . expressao_simples
    (44) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (37) atribuicao -> . var ATRIBUICAO expressao
    (45) expressao_simples -> . expressao_aditiva
    (46) expressao_simples -> . expressao_logica operador_relacional expressao_simples
    (11) var -> . ID
    (12) var -> . ID indice
    (47) expressao_aditiva -> . expressao_multiplicativa
    (48) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (49) expressao_multiplicativa -> . expressao_unaria
    (50) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (51) expressao_unaria -> . fator
    (52) expressao_unaria -> . operador_soma fator
    (53) expressao_unaria -> . NAO fator
    (67) fator -> . ABRE_PARENTESES expressao FECHA_PARENTESES
    (68) fator -> . var
    (69) fator -> . chamada_funcao
    (70) fator -> . numero
    (60) operador_soma -> . SOMA
    (61) operador_soma -> . SUBTRACAO
    (73) chamada_funcao -> . ID ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
    (71) numero -> . NUM_INTEIRO
    (72) numero -> . NUM_PONTO_FLUTUANTE

    ID              shift and go to state 40
    NAO             shift and go to state 28
    ABRE_PARENTESES shift and go to state 30
    SOMA            shift and go to state 26
    SUBTRACAO       shift and go to state 29
    NUM_INTEIRO     shift and go to state 35
    NUM_PONTO_FLUTUANTE shift and go to state 36

    expressao_simples              shift and go to state 25
    expressao_logica               shift and go to state 41
    expressao                      shift and go to state 49
    operador_soma                  shift and go to state 27
    chamada_funcao                 shift and go to state 37
    expressao_aditiva              shift and go to state 38
    fator                          shift and go to state 32
    expressao_unaria               shift and go to state 34
    numero                         shift and go to state 39
    atribuicao                     shift and go to state 42
    var                            shift and go to state 33
    expressao_multiplicativa       shift and go to state 43

state 22

    (7) declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .
    (9) lista_variaveis -> lista_variaveis . VIRGULA var

    INTEIRO         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FLUTUANTE       reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ID              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    $end            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ATE             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SE              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    REPITA          reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    LEIA            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ESCREVA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    RETORNA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NAO             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ABRE_PARENTESES reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SOMA            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SUBTRACAO       reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NUM_INTEIRO     reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NUM_PONTO_FLUTUANTE reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FIM             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SENAO           reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    VIRGULA         shift and go to state 50


state 23

    (10) lista_variaveis -> var .

    VIRGULA         reduce using rule 10 (lista_variaveis -> var .)
    INTEIRO         reduce using rule 10 (lista_variaveis -> var .)
    FLUTUANTE       reduce using rule 10 (lista_variaveis -> var .)
    ID              reduce using rule 10 (lista_variaveis -> var .)
    $end            reduce using rule 10 (lista_variaveis -> var .)
    FIM             reduce using rule 10 (lista_variaveis -> var .)
    SE              reduce using rule 10 (lista_variaveis -> var .)
    REPITA          reduce using rule 10 (lista_variaveis -> var .)
    LEIA            reduce using rule 10 (lista_variaveis -> var .)
    ESCREVA         reduce using rule 10 (lista_variaveis -> var .)
    RETORNA         reduce using rule 10 (lista_variaveis -> var .)
    NAO             reduce using rule 10 (lista_variaveis -> var .)
    ABRE_PARENTESES reduce using rule 10 (lista_variaveis -> var .)
    SOMA            reduce using rule 10 (lista_variaveis -> var .)
    SUBTRACAO       reduce using rule 10 (lista_variaveis -> var .)
    NUM_INTEIRO     reduce using rule 10 (lista_variaveis -> var .)
    NUM_PONTO_FLUTUANTE reduce using rule 10 (lista_variaveis -> var .)
    ATE             reduce using rule 10 (lista_variaveis -> var .)
    SENAO           reduce using rule 10 (lista_variaveis -> var .)


state 24

    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ABRE_COLCHETE expressao FECHA_COLCHETE
    (14) indice -> . ABRE_COLCHETE expressao FECHA_COLCHETE

    VIRGULA         reduce using rule 11 (var -> ID .)
    INTEIRO         reduce using rule 11 (var -> ID .)
    FLUTUANTE       reduce using rule 11 (var -> ID .)
    ID              reduce using rule 11 (var -> ID .)
    $end            reduce using rule 11 (var -> ID .)
    FIM             reduce using rule 11 (var -> ID .)
    SE              reduce using rule 11 (var -> ID .)
    REPITA          reduce using rule 11 (var -> ID .)
    LEIA            reduce using rule 11 (var -> ID .)
    ESCREVA         reduce using rule 11 (var -> ID .)
    RETORNA         reduce using rule 11 (var -> ID .)
    NAO             reduce using rule 11 (var -> ID .)
    ABRE_PARENTESES reduce using rule 11 (var -> ID .)
    SOMA            reduce using rule 11 (var -> ID .)
    SUBTRACAO       reduce using rule 11 (var -> ID .)
    NUM_INTEIRO     reduce using rule 11 (var -> ID .)
    NUM_PONTO_FLUTUANTE reduce using rule 11 (var -> ID .)
    ATE             reduce using rule 11 (var -> ID .)
    SENAO           reduce using rule 11 (var -> ID .)
    ABRE_COLCHETE   shift and go to state 21

    indice                         shift and go to state 20

state 25

    (43) expressao_logica -> expressao_simples .

    E               reduce using rule 43 (expressao_logica -> expressao_simples .)
    OU              reduce using rule 43 (expressao_logica -> expressao_simples .)
    MENOR           reduce using rule 43 (expressao_logica -> expressao_simples .)
    MAIOR           reduce using rule 43 (expressao_logica -> expressao_simples .)
    IGUAL           reduce using rule 43 (expressao_logica -> expressao_simples .)
    DIFERENTE       reduce using rule 43 (expressao_logica -> expressao_simples .)
    MENOR_IGUAL     reduce using rule 43 (expressao_logica -> expressao_simples .)
    MAIOR_IGUAL     reduce using rule 43 (expressao_logica -> expressao_simples .)
    FECHA_PARENTESES reduce using rule 43 (expressao_logica -> expressao_simples .)
    VIRGULA         reduce using rule 43 (expressao_logica -> expressao_simples .)
    FECHA_COLCHETE  reduce using rule 43 (expressao_logica -> expressao_simples .)
    INTEIRO         reduce using rule 43 (expressao_logica -> expressao_simples .)
    FLUTUANTE       reduce using rule 43 (expressao_logica -> expressao_simples .)
    ID              reduce using rule 43 (expressao_logica -> expressao_simples .)
    $end            reduce using rule 43 (expressao_logica -> expressao_simples .)
    FIM             reduce using rule 43 (expressao_logica -> expressao_simples .)
    SE              reduce using rule 43 (expressao_logica -> expressao_simples .)
    REPITA          reduce using rule 43 (expressao_logica -> expressao_simples .)
    LEIA            reduce using rule 43 (expressao_logica -> expressao_simples .)
    ESCREVA         reduce using rule 43 (expressao_logica -> expressao_simples .)
    RETORNA         reduce using rule 43 (expressao_logica -> expressao_simples .)
    NAO             reduce using rule 43 (expressao_logica -> expressao_simples .)
    ABRE_PARENTESES reduce using rule 43 (expressao_logica -> expressao_simples .)
    SOMA            reduce using rule 43 (expressao_logica -> expressao_simples .)
    SUBTRACAO       reduce using rule 43 (expressao_logica -> expressao_simples .)
    NUM_INTEIRO     reduce using rule 43 (expressao_logica -> expressao_simples .)
    NUM_PONTO_FLUTUANTE reduce using rule 43 (expressao_logica -> expressao_simples .)
    ENTAO           reduce using rule 43 (expressao_logica -> expressao_simples .)
    ATE             reduce using rule 43 (expressao_logica -> expressao_simples .)
    SENAO           reduce using rule 43 (expressao_logica -> expressao_simples .)


state 26

    (60) operador_soma -> SOMA .

    ABRE_PARENTESES reduce using rule 60 (operador_soma -> SOMA .)
    ID              reduce using rule 60 (operador_soma -> SOMA .)
    NUM_INTEIRO     reduce using rule 60 (operador_soma -> SOMA .)
    NUM_PONTO_FLUTUANTE reduce using rule 60 (operador_soma -> SOMA .)
    NAO             reduce using rule 60 (operador_soma -> SOMA .)
    SOMA            reduce using rule 60 (operador_soma -> SOMA .)
    SUBTRACAO       reduce using rule 60 (operador_soma -> SOMA .)


state 27

    (52) expressao_unaria -> operador_soma . fator
    (67) fator -> . ABRE_PARENTESES expressao FECHA_PARENTESES
    (68) fator -> . var
    (69) fator -> . chamada_funcao
    (70) fator -> . numero
    (11) var -> . ID
    (12) var -> . ID indice
    (73) chamada_funcao -> . ID ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
    (71) numero -> . NUM_INTEIRO
    (72) numero -> . NUM_PONTO_FLUTUANTE

    ABRE_PARENTESES shift and go to state 30
    ID              shift and go to state 40
    NUM_INTEIRO     shift and go to state 35
    NUM_PONTO_FLUTUANTE shift and go to state 36

    chamada_funcao                 shift and go to state 37
    numero                         shift and go to state 39
    fator                          shift and go to state 51
    var                            shift and go to state 52

state 28

    (53) expressao_unaria -> NAO . fator
    (67) fator -> . ABRE_PARENTESES expressao FECHA_PARENTESES
    (68) fator -> . var
    (69) fator -> . chamada_funcao
    (70) fator -> . numero
    (11) var -> . ID
    (12) var -> . ID indice
    (73) chamada_funcao -> . ID ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
    (71) numero -> . NUM_INTEIRO
    (72) numero -> . NUM_PONTO_FLUTUANTE

    ABRE_PARENTESES shift and go to state 30
    ID              shift and go to state 40
    NUM_INTEIRO     shift and go to state 35
    NUM_PONTO_FLUTUANTE shift and go to state 36

    chamada_funcao                 shift and go to state 37
    numero                         shift and go to state 39
    fator                          shift and go to state 53
    var                            shift and go to state 52

state 29

    (61) operador_soma -> SUBTRACAO .

    ABRE_PARENTESES reduce using rule 61 (operador_soma -> SUBTRACAO .)
    ID              reduce using rule 61 (operador_soma -> SUBTRACAO .)
    NUM_INTEIRO     reduce using rule 61 (operador_soma -> SUBTRACAO .)
    NUM_PONTO_FLUTUANTE reduce using rule 61 (operador_soma -> SUBTRACAO .)
    NAO             reduce using rule 61 (operador_soma -> SUBTRACAO .)
    SOMA            reduce using rule 61 (operador_soma -> SUBTRACAO .)
    SUBTRACAO       reduce using rule 61 (operador_soma -> SUBTRACAO .)


state 30
